# ClubActivityLogger

./: CMakeLists.txt  README.md
include/: Client.h  ComputerClub.h  Event.h  InputParser.h  Table.h  TimeUtils.h
src/: Client.cpp  ComputerClub.cpp  Event.cpp  Table.cpp  main.cpp
tests/: tests.cpp
